migrate to StandardCharsets (java 17) (#91)